I think there was a typo in the hompeage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"homepage": "http://judeclark19.github.io/capture1",
+  "homepage": "http://judeclark19.github.io/capture",
   "name": "capture",
   "version": "0.1.0",
   "private": true,
